# forgetting-transformer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REPRODUCE.md  pyproject.toml  requirements-dev.txt  save_model.py  train.py
configs/: __init__.py  config.py  utils.py
configs/datamodule/: __init__.py  longcrawl64.py  slimpajama.py
configs/experiment/longcrawl64/delta_net/: 125m_2b.yaml  360m_7b.yaml  760m_16b.yaml  760m_48b.yaml
configs/experiment/slimpajama/: .yaml
configs/model/: __init__.py  delta_net.py  forgetting_transformer.py  hgrn2.py  mamba2.py  samba.py  transformer.py
configs/optimizer/: __init__.py  adamw.py
configs/schedule/: __init__.py  constant.py  warmup_cosine.py  warmup_linear.py  warmup_one_minus_sqrt.py
configs/strategy/: __init__.py  ddp.py  fsdp.py
eval/lm_eval_harness/: README.md  run_lm_eval.py  table_lm_eval.py
eval/longbench/: README.md  eval.py  pred.py  table_longbench.py
eval/niah/: README.md  config-eval.yaml  config-pred.yaml  config-prompt-debug.yaml  config-prompt-easy.yaml  config-prompt-standard.yaml  eval.py  plot_niah.py  pred.py  prompt.py
eval/per_token_loss/: README.md  plot_per_token_loss.py  run_per_token_loss.py
src/forgetting_transformer/: __init__.py  checkpoint.py  logger.py  tokenizer.py  utils.py
src/forgetting_transformer/datamodule/: common.py  longcrawl64.py  slimpajama.py
src/forgetting_transformer/model/: README.md  __init__.py  common.py  register_all.py
src/forgetting_transformer/ops/: forgetting_attention.py
src/forgetting_transformer/schedule/: __init__.py  schedule.py
(+58 files in other folders)
